<resources>
    <string name="app_name">iTube</string>
    <string name="my_playlist">My Playlist</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="fullname">Full Name</string>
    <string name="please_input_your_video_url">Please Input Your Video URL</string>
    <string name="play">Play</string>
    <string name="add_to_playlist">Add To PlayList</string>
    <string name="youtube_url">YouTube URL:</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
</resources>