<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/youtube_url"
        android:layout_marginTop="200dp"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <EditText
        android:id="@+id/editTextURL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/please_input_your_video_url"
        android:layout_below="@+id/title"
        android:layout_marginTop="10dp"
        android:padding="10dp"/>

    <Button
        android:id="@+id/buttonPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:layout_below="@id/editTextURL"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/buttonAddToPlaylist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to_playlist"
        android:layout_below="@id/buttonPlay"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <Button
        android:id="@+id/buttonMyPlaylist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/my_playlist"
        android:layout_below="@id/buttonAddToPlaylist"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

</RelativeLayout>